--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5348,4 +5348,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="WRN_SwitchExpressionNotExhaustive_Title" xml:space="preserve">
     <value>The switch expression does not handle all possible inputs (it is not exhaustive).</value>
   </data>
+  <data name="ERR_ExpressionTreeContainsSwitchExpression" xml:space="preserve">
+    <value>An expression tree may not contain a switch-expression.</value>
+  </data>
 </root>
