--- a/src/Compilers/CSharp/Portable/xlf/CSharpResources.es.xlf
+++ b/src/Compilers/CSharp/Portable/xlf/CSharpResources.es.xlf
@@ -8770,6 +8770,11 @@ Para eliminar la advertencia puede usar /reference (establezca la propiedad Embe
         <target state="new">The switch expression does not handle all possible inputs (it is not exhaustive).</target>
         <note />
       </trans-unit>
+      <trans-unit id="ERR_ExpressionTreeContainsSwitchExpression">
+        <source>An expression tree may not contain a switch-expression.</source>
+        <target state="new">An expression tree may not contain a switch-expression.</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
