--- a/src/Compilers/CSharp/Portable/xlf/CSharpResources.pt-BR.xlf
+++ b/src/Compilers/CSharp/Portable/xlf/CSharpResources.pt-BR.xlf
@@ -8770,6 +8770,11 @@ Para incorporar informações de tipo de interoperabilidade para os dois assembl
         <target state="new">The switch expression does not handle all possible inputs (it is not exhaustive).</target>
         <note />
       </trans-unit>
+      <trans-unit id="ERR_ExpressionTreeContainsSwitchExpression">
+        <source>An expression tree may not contain a switch-expression.</source>
+        <target state="new">An expression tree may not contain a switch-expression.</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
