--- a/src/Workspaces/Core/Portable/WorkspacesResources.resx
+++ b/src/Workspaces/Core/Portable/WorkspacesResources.resx
@@ -709,4 +709,7 @@
   <data name="x_y_range_in_reverse_order" xml:space="preserve">
     <value>[x-y] range in reverse order</value>
   </data>
+  <data name="Regex_issue_0" xml:space="preserve">
+    <value>Regex issue: {0}</value>
+  </data>
 </root>
