--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.zh-Hant.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.zh-Hant.xlf
@@ -957,6 +957,11 @@
         <target state="new">[x-y] range in reverse order</target>
         <note />
       </trans-unit>
+      <trans-unit id="Regex_issue_0">
+        <source>Regex issue: {0}</source>
+        <target state="new">Regex issue: {0}</target>
+        <note />
+      </trans-unit>
     </body>
   </file>
 </xliff>
